# verifier

./: .gitignore  Makefile  README.md  config.py  main.py  prompt_plan.md  pyproject.toml  requirements.txt  specs.md  tasks.md  todo.md  variations.md
scripts/: Eval.ipynb  MakeEvalDataset.ipynb  predict.py  train.py  train.sh  train_distilroberta.py  train_max_logging.py  upload_to_hf.py
src/: __init__.py  char_model.py  config.py  data_generator.py  dataset.py  evaluation.py  infer_char_model.py  inference.py  model.py  prompts.py  train_char_model.py  trainer.py  utils.py  verifier.py
src/utils/: __init__.py  decimal_utils.py  text_utils.py
tests/: README.md  __init__.py  conftest.py  test_amount_conversion.py  test_data_generator.py  test_dataset.py  test_decimal_utils.py  test_inference.py  test_model.py  test_trainer.py  test_utils.py  test_verifier.py
