[project]
name = "verifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "inflect>=7.5.0",
    "ipython>=9.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "python-levenshtein>=0.26.1",
    "ruff>=0.9.9",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "wandb>=0.19.7",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
# Enable Pyflakes (`F`), isort (`I`), and other default rules
select = ["E", "F", "I", "W", "N"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["A", "B", "C", "D", "E", "F", "I", "N", "Q", "S", "T", "W"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
markers = [
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]
testpaths = ["tests"]
